# tessera-util

./: .gitignore  _command_cheat_sheet.txt  _setup_env.bash  _setup_env_interact.bash  alpha_beta_prune_visualizer.ipynb  host_files.txt  hostfile_intel_mpi  hostfile_intel_mpi_train  nohup.out  param_sweep.csv  param_sweep_summary.csv  param_sweep_temp.csv  valid_dirs.txt  valid_dirs_raw.txt
cci_workshop_roi_shp/: Albertine_rift.dbf  Albertine_rift.shp  Albertine_rift.shx  Atlantic_Forest.dbf  Atlantic_Forest.qmd  Atlantic_Forest.shp  Atlantic_Forest.shx  SP.dbf  SP.shp  SP.shx  austrian_crop.dbf  austrian_crop.shp  austrian_crop.shx  borneo.dbf  borneo.shx  centralsenegal_jcam_bbox.dbf  centralsenegal_jcam_bbox.shp  centralsenegal_jcam_bbox.shx  clement_GEDI_buffer.dbf  clement_GEDI_buffer.shp  clement_GEDI_buffer.shx  clement_para_buffer.dbf  clement_para_buffer.shp  clement_para_buffer.shx  europe.dbf  europe.shp  europe.shx  first_new_zealand.dbf  first_new_zealand.shp  first_new_zealand.shx  first_priority.dbf  first_priority.shp  first_priority.shx  first_spain_portugal.dbf  first_spain_portugal.shp  first_spain_portugal.shx  second_colombia.dbf  second_colombia.shp  second_colombia.shx  second_east_africa.dbf  (+16 more)
configs/: downstream_borneo.py  downstream_config.py  downstream_config_64_fixed.py  ethiopia_config.py  ethiopia_downstream_via_rep_config.py  ethiopia_infer_config.py  infer_22MHC_config.py  infer_config.py  infer_config_robin.py  (+10 more)
training-data-preprocessing-singularity/: Cargo.toml  Singularity.def
training-data-preprocessing-singularity/src/: main.rs
(+177 files in other folders)
